package com.gmail.bogumilmecel2.fitnessappv2.common.util

object TestTags {
    // SCREENS
    const val REGISTER_SCREEN = "register_screen"
    const val LOGIN_SCREEN = "login_screen"
    const val RESET_PASSWORD_SCREEN = "reset_password_screen"
    const val NEW_RECIPE_SCREEN = "new_recipe_screen"

    // COMPONENTS
    const val SNACKBAR = "snackbar"
    const val PRIMARY_BUTTON = "primary_button"
    const val LOADER = "loader"

    // SPECIFIC UI ELEMENTS
    const val USERNAME = "username"
    const val CONFIRM_PASSWORD = "confirm_password"
    const val EMAIL = "email"
    const val PASSWORD = "password"
    const val FORGOT_PASSWORD = "forgot_password"
    const val REGISTER_BUTTON = "register_button"
    const val LOGIN_BUTTON = "login_button"
}