<resources>
    <string name="app_name">Fitness App</string>

    <string name="unknown_error">An unknown error has happened</string>

    <string name="cm">cm</string>
    <string name="kg">kg</string>

    <string name="kcal_with_value">%s Kcal</string>

    <string name="not_available">N/A</string>
    <string name="accept">Accept</string>
    <string name="ask_me_later">Ask me later</string>
    <string name="decline">Decline</string>

    <string name="bottom_nav_summary">Summary</string>
    <string name="bottom_nav_diary">Diary</string>
    <string name="bottom_nav_account">Account</string>
    <string name="bottom_nav_training">Training</string>

<!--    Auth-->
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Log into your account</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Create your account</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="i_don_t_have_an_account_register">I Don\'t Have An Account! Register</string>
    <string name="empty_fields_error">Please Make Sure All Fields Are Filled In Correctly.</string>
    <string name="please_make_sure_both_passwords_are_the_same">Please Make Sure Both Passwords Are The Same.</string>
    <string name="i_have_an_account_login">I Have An Account! Login</string>
    <string name="please_enter_your_email_in_order_to_reset_your_password">Please Enter Your Email In Order To Reset Your Password.</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="reset_my_password">SEND EMAIL</string>
    <string name="register_password_length_invalid">please make sure your password is at least 6 characters and is not longer than 24 characters</string>
    <string name="register_email_length_invalid">Please make sure you have entered correct email</string>
    <string name="register_username_length_invalid">Please make sure you have entered correct username</string>
    <string name="please_make_sure_you_have_entered_correct_email">Please make sure you have entered the correct email</string>


    <!--    Introduction-->
    <string name="what_is_your_gender">What is your gender?</string>
    <string name="what_is_your_age">What is your age?</string>
    <string name="what_is_your_current_weight">What is your current weight?</string>
    <string name="what_is_your_desired_weight">What would you like to do with your weight?</string>
    <string name="what_is_your_height">What is your height?</string>
    <string name="what_type_of_work_do_you_have">What type of work do you have?</string>
    <string name="how_often_do_you_train_in_a_week">How often do you train in a week</string>
    <string name="how_would_you_describe_your_activity_level_during_a_day">How would you describe your activity level during a day?</string>
    <string name="please_make_sure_you_have_entered_your_weight">Please make sure you have entered your weight</string>
    <string name="please_make_sure_you_have_entered_your_desired_weight">Please make sure you have entered your desired weight</string>
    <string name="please_make_sure_you_have_entered_your_age">Please make sure you have entered your age</string>
    <string name="introduction_height_error">Please make sure you have entered correct height</string>

<!--    Common-->
    <string name="calories">Calories</string>

<!--    Diary-->
    <string name="meal_name_breakfast">Breakfast</string>
    <string name="meal_name_lunch">Lunch</string>
    <string name="meal_name_dinner">Dinner</string>
    <string name="meal_name_supper">Supper</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="filter">Filter recipes</string>
    <string name="product_name">Product name</string>
    <string name="nutrition_values">Nutrition values</string>
    <string name="incorrect_weight_was_entered">Incorrect weight was entered</string>
    <string name="in_container">In Container</string>
    <string name="in_average">In Average</string>
    <string name="in_100g">In 100 g</string>
    <string name="in_100ml">In 100 ml</string>
    <string name="container_weight">Container weight</string>
    <string name="average_weight">Average weight</string>
    <string name="what_would_you_like_to_do">What would you like to do</string>

    <string name="new_product_empty_name">Please make sure product name is not empty</string>
    <string name="new_product_wrong_name_length_short">Please make sure that the product name is not shorter than 3 characters</string>
    <string name="new_product_wrong_name_length_long">Please make sure that the product name is not longer than 48 characters</string>
    <string name="new_product_bad_container_weight">Please make sure that you have entered correct container weight</string>
    <string name="new_product_bad_nutrition_values">Please make sure that you have entered nutrition values correctly</string>

    <string name="camera_permission_is_required_to_scan_a_product_barcode">Camera permission is required to scan a product barcode</string>
    <string name="there_is_no_product_with_provided_barcode_do_you_want_to_add_it">There is no product with provided barcode.</string>
    <string name="search_add_it_now">Do you want to add it now?</string>
    <string name="diary_serving">%s Serving</string>
    <string name="diary_multiple_serving">%s Servings</string>

    <string name="measurement_unit_gram">g</string>
    <string name="measurement_unit_milliliter">ml</string>
    <string name="measurement_unit_gram_with_value">%sg</string>
    <string name="measurement_unit_milliliter_with_value">%sml</string>

    <string name="currency_pln">zł</string>
    <string name="currency_usd">$</string>
    <string name="currency_eur">€</string>

    <string name="kcal"> Kcal</string>
    <string name="delete">delete</string>
    <string name="name">Name</string>
    <string name="save">Save</string>

    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>


    <string name="add">Add</string>

    <string name="search_everything">Everything</string>
    <string name="search_my_products">My products</string>
    <string name="search_my_recipes">My recipes</string>
    <string name="search_for_products">Search for products</string>
    <string name="search_for_recipes">Search for recipes</string>
    <string name="search">Search</string>
    <string name="search_browse_recipes">Browse recipes</string>
    <string name="search_quick_add">Quick add</string>
    <string name="search_add_ingredient">Add ingredient</string>

    <!--    summary-->
    <string name="days">%s days in a row</string>
    <string name="summary_weight_dialog_title">What is your today\'s weight</string>
    <string name="summary_ask_for_weight_dialogs_title">Would you like us to track your weight daily?</string>
    <string name="summary_ask_for_weight_dialogs_description">You will be automatically asked about your weight every time you log into the app for the first time each day. Later, if you don\'t like it you can turn this off in your account settings</string>
    
<!--    product-->
    <string name="prices">Prices</string>
    <string name="price_for_100g_of_protein">100 Grams of protein</string>
    <string name="price_for_100g_of_fat">100 Grams of fat</string>
    <string name="price_for_100g_of_carbohydrates">100 Grams of carbs</string>
    <string name="price_for_100_kcal">100 Calories</string>
    <string name="price_how_much_pay">How much did you pay for %s</string>
    <string name="submit_new_price">Submit New Price</string>
    <string name="submit">Submit</string>
    <string name="paid">Paid</string>
    <string name="price_for">For</string>
    <string name="product_no_price">No one has entered a price for this product.</string>
    <string name="please_make_sure_you_have_entered_correct_values_for_new_price">Please make sure you have entered correct values for the new price</string>
    <string name="successfully_submitted_new_price">Successfully submitted new price</string>

    <string name="carbohydrates_g">Carbohydrates(g)</string>
    <string name="protein_g">Protein(g)</string>
    <string name="fat_g">Fat(g)</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fat">Fat</string>

<!--    Summary weight-->
    <string name="weight">Weight</string>

    <string name="account_daily_weight_description">You will be automatically asked about your weight every time you log into the app for the first time each day</string>

    <!--    recipe-->
    <string name="add_recipe">Create recipe</string>
    <string name="recipe_name">Recipe name</string>
    <string name="products">Products</string>
    <string name="recipes">Recipes</string>
    <string name="add_image">Add image</string>
    <string name="time">Time</string>
    <string name="difficulty">Difficulty</string>
    <string name="servings">Servings</string>
    <string name="empty_recipe_ingredients">Please make sure there are at least 2 ingredients in your recipe.</string>
    <string name="bad_recipe_name">Please make sure your recipe\'s name is at least 4 characters long</string>
    <string name="recipe_time_required">Time to make</string>
    <string name="recipe_difficulty">Difficulty</string>
    <string name="recipe_serves">Recipe serves %s people</string>
    <string name="recipe_ingredients">Ingredients</string>
    <string name="recipe_save_to">Save to %s</string>
    <string name="recipe_edit">Edit recipe</string>
    <string name="recipe_servings_error">Please make sure you have entered correct servings value</string>
    <string name="recipe_price">Recipe price</string>
    <string name="recipe_information">Recipe information</string>
    <string name="serving">Serving</string>
    <string name="recipe">Recipe</string>
    <string name="recipe_price_warning">Not every product has a price!</string>
    <string name="selected">Selected</string>
    <string name="new_recipe_delete_ingredient_title">Do you want to delete %s from your recipe?</string>
    <string name="recipe_difficulty_out_of_5">%s / 5</string>

    <string name="new_recipe_public">Should recipe be public</string>
    <string name="new_recipe_public_des">Everybody will be able to see it and you will not be able to delete it</string>
    <string name="new_recipe_save">Save recipe</string>

    <string name="next">NEXT</string>
    <string name="finish">FINISH</string>
    <string name="back">BACK</string>
    <string name="let_us_know_something_about_you">Let Us Know Something About You!</string>


    <string name="g">g</string>
    <string name="bar_code">Bar code</string>

    <string name="edit">edit</string>
    <string name="log_out">Log out</string>
    <string name="account_ask_for_weight_daily">Ask for weight daily</string>
    <string name="create_product">Create Product</string>
    <string name="add_product">Add product</string>
    <string name="you_have_logged_for">You have logged for</string>
    <string name="cancel">Cancel</string>

    <string name="username">Username</string>
    <string name="macro_elements">Macro elements</string>
    <string name="total">Total %</string>
    <string name="your_total_has_to_be_at_100">Your total has to be at 100%</string>

    <string name="nutrition_goals">Nutrition goals</string>

    <string name="introduction_sedentary">Sedentary</string>
    <string name="introduction_mixed">Mixed</string>
    <string name="introduction_physical">Physical</string>

    <string name="introduction_none">None</string>
    <string name="introduction_training_low">1–2</string>
    <string name="introduction_training_average">3–4</string>
    <string name="introduction_training_high">5–6</string>
    <string name="introduction_training_very_high">7–8</string>
    <string name="introduction_activity_low">Low</string>
    <string name="introduction_activity_moderate">Moderate</string>
    <string name="introduction_activity_high">High</string>
    <string name="introduction_activity_very_high">Very High</string>
    <string name="introduction_male">Male</string>
    <string name="introduction_female">Female</string>
    <string name="introduction_loose">Loose</string>
    <string name="introduction_gain">Gain</string>
    <string name="introduction_keep">Keep</string>


<!--    Test tags-->
    <string name="NEXT">NEXT</string>
    <string name="BACK">BACK</string>
    <string name="NEXT_TEXT">NEXT TEXT</string>
    <string name="CALENDAR_BACK">CALENDAR BACK</string>
    <string name="CALENDAR_DATE">CALENDAR DATE</string>
    <string name="CALENDAR_FORWARD">CALENDAR FORWARD</string>
    <string name="EMAIL">EMAIL</string>
    <string name="PASSWORD">PASSWORD</string>
    <string name="CONFIRM">CONFIRM</string>
    <string name="USERNAME">USERNAME</string>
    <string name="BUTTON">BUTTON</string>
    <string name="SEARCH_TEXT_FIELD">SEARCH TEXT FIELD</string>
    <string name="WEIGHT_TEXT_FIELD">WEIGHT TEXT FIELD</string>
    <string name="SEARCH_BUTTON">SEARCH BUTTON</string>
    <string name="WEIGHT_BUTTON">WEIGHT BUTTON</string>
    <string name="scanner">SCANNER</string>
</resources>